# API-Inventory-Management

./: .gitignore  .pylintrc  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: .ci.yml  release-build.yml
data/: mock_data.dump
inventory_management_system_api/: .env.example  main.py
inventory_management_system_api/auth/: jwt_bearer.py
inventory_management_system_api/core/: config.py  consts.py  custom_object_id.py  database.py  exceptions.py
inventory_management_system_api/models/: catalogue_category.py  catalogue_item.py  custom_object_id_data_types.py  item.py  manufacturer.py  mixins.py  system.py  unit.py  usage_status.py
inventory_management_system_api/repositories/: catalogue_category.py  catalogue_item.py  item.py  manufacturer.py  system.py  unit.py  usage_status.py  utils.py
inventory_management_system_api/schemas/: breadcrumbs.py  catalogue_category.py  catalogue_item.py  item.py  manufacturer.py  mixins.py  system.py  unit.py  usage_status.py
inventory_management_system_api/services/: catalogue_category.py  catalogue_category_property.py  catalogue_item.py  item.py  manufacturer.py  system.py  unit.py  usage_status.py  utils.py
scripts/: dev_cli.py  generate_mock_data.py
test/: conftest.py  mock_data.py  pytest.ini
test/e2e/: conftest.py  test_catalogue_category.py  test_catalogue_category_property.py  test_catalogue_item.py  test_item.py  test_jwt_bearer.py  test_manufacturer.py  test_system.py  test_unit.py  test_usage_status.py
(+29 files in other folders)
